[project]
name = "core-components"
version = "0.1.1"
description = "abstract classes and reusable components for (my) python webapps"
authors = [
  {name = "Cristian Godoy", email = "crgo@nve.no" } 
]
readme = "README.md"
requires-python = ">=3.10"

dependencies = [ 
"ipyleaflet",
"ipywidgets",
"ipyvuetify",
"ipython",
"Shapely",
"numpy",
"ezdxf",
"plotly",
"pandas",
"geopandas",
"tqdm",
"rasterio",
]



[tool.setuptools]
[build-system]
requires = ["setuptools>=43.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
exclude = ["notebooks*", "test*"]